# Create-a-Secure-IoT-Solution-with-Azphere-Sphere-and-and-Azure-IoT-Central

./: .gitignore  CMakeLists.txt  README.md  app_manifest.json  iot_central.c  iot_central.h  launch.vs.json  main.c
MT3620_Grove_Shield_Library/: CMakeLists.txt
